# aio-100-days-pythons

./: .gitignore  LICENSE  README.md  utils.py
day-1/: practice.py
day-2/: extra.py  practice.py
day-4/: practice.py
day-6-convolutional-with-zero-padding/: pratice.py
day-7/: pratice.py
day_10_oop/: practice.py
day_11_oop/: practice.py
day_15_simple_medical_image_classification/: app.py
day_17_horse_patrol/: practice.py
day_18_simple_train_and_log_with_wandb/: practice.py  practice_streamlit_version.py  readme.md
day_19_base_sql/: db.sqlite  practice.py
day_21_term_frequency_and_invert_doc_frequency/: practice.py
day_3/: practice.py
day_5/: note.txt
day_8_cosine_similarity/: practice.py
day_9_oop/: practice.py
my_packages/useful_concurrent_wrapper/: README.md  pyproject.toml
my_packages/useful_concurrent_wrapper/src/useful_concurrent_wrapper/: __init__.py  wrapper.py
my_packages/useful_concurrent_wrapper/useful_concurrent_wrapper/: app.py
projects/genetive_ai_with_llms/: 00_flan_t5_with_promting.py  00_requirements.txt  01_fine_tune_a_genAI_model_for_dialogue_summarization.py  01_requirements.txt
projects/m3/: text_project_sentiment_customer_satisfication.py
subjects/image_color_bounding_box_region/: practice.py
subjects/iou_calculation/: practice.py  requirements.txt
subjects/least_square_estimattion/: practice.py
subjects/least_squares_estimation/: practice.py
subjects/m2_email_classification/: app.py
subjects/m2_image_retrieval/: filename.txt  (+6 more)
utils/: common_util.py  constant.py  nltk_util.py  text_preprocess_util.py
(+118 files in other folders)
